# wasmtime-panic-reproduce

./: Cargo.toml  rust-bootstrap-component.wasm
src/: main.rs
