[package]
name = "wasmtime-panic-reproduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "6df3bbb", features = ["component-model"] }
